feat: swagger configuration
