# src/controllers/category.js
@@ -6,24 +6,43 @@ const Category = require('../models/category');
 module.exports = {
 
     list: async (req, res) => {
-        /* 
+        
+          /*
             #swagger.tags = ["Categories"]
             #swagger.summary = "List Categories"
+            #swagger.description = `
+                You can send query with endpoint for filter[], search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+            `
         */
 
-        const result = await res.getModelList(Category)
+            const result = await res.getModelList(Category)
 
-        res.status(200).send({
-            error: false,
-            result,
-        })
+            res.status(200).send({
+                error: false,
+                details: await res.getModelListDetails(Category),
+                result            
+            })
     },
 
     // CRUD:
     create: async (req, res) => {
-        /* 
-            #swagger.ignore = true
-        */
+        /*
+            #swagger.tags = ["Categories"]
+            #swagger.summary = "Create Category"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                $ref"#/definitions/Category"
+                    }
+                }
+            */
 
         const result = await Category.create(req.body)
 
@@ -48,9 +67,17 @@ module.exports = {
     },
 
     update: async (req, res) => {
-        /* 
-            #swagger.ignore = true
-        */
+         /*
+                #swagger.tags = ["Categories"]
+                #swagger.summary = "Update Category"
+                #swagger.parameters['body'] = {
+                    in: 'body',
+                    required: true,
+                    schema: {
+                    $ref"#/definitions/Category"
+                    }
+                }
+            */
 
         const result = await Category.updateOne({ _id: req.params.id }, req.body, { runValidators: true })
 
@@ -63,9 +90,11 @@ module.exports = {
     },
 
     deletee: async (req, res) => {
-        /* 
-            #swagger.ignore = true
-        */
+                /*
+                #swagger.tags = ["Categories"]
+                #swagger.summary = "Delete Category"
+            */
+    
 
         const result = await Category.deleteOne({ _id: req.params.id })
 
