# src/controllers/user.js
@@ -16,12 +16,13 @@ module.exports = {
             #swagger.tags = ["Users"]
             #swagger.summary = "List Users"
             #swagger.description = `
-                You can send query with endpoint for search[], sort[], page and limit.
-                <ul> Examples:
-                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
-                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
-                    <li>URL/?<b>page=2&limit=1</b></li>
-                </ul>
+                You can send query with endpoint for filter[], search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
             `
         */
 
@@ -36,21 +37,17 @@ module.exports = {
 
     // CRUD:
     create: async (req, res) => {
-        /* 
-            #swagger.tags = ["Users"]
-            #swagger.summary = "Create User"
-            #swagger.parameters['body'] = {
-                in:'body',
-                required:true,
-                schema:{
-                    "username": "test",
-                    "password": "Test01?",
-                    "email": "test@site.com",
-                    "firstName": "test",
-                    "lastName": "test",
+        /*
+        #swagger.tags = ['Users']
+        #swagger.summary = 'Create User'
+        #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                  $ref: '#/definitions/User'
                 }
             }
-        */
+    */
 
         const result = await User.create(req.body);
 
@@ -102,21 +99,17 @@ module.exports = {
     },
 
     update: async (req, res) => {
-        /* 
-            #swagger.tags = ["Users"]
-            #swagger.summary = "Update User"
-            #swagger.parameters['body'] = {
-                in:'body',
-                required:true,
-                schema:{
-                    "username": "test",
-                    "password": "Test01?",
-                    "email": "test@site.com",
-                    "firstName": "test",
-                    "lastName": "test",
+        /*
+        #swagger.tags = ['Users']
+        #swagger.summary = 'Update User'
+        #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                  $ref: '#/definitions/User'
                 }
             }
-        */
+    */
 
         if (!req.user.isAdmin) req.params.id = req.user._id;
 
@@ -147,6 +140,18 @@ module.exports = {
     },
 
     forgotPassword: async(req, res) => {
+
+        /* 
+            #swagger.tags = ["Users"]
+            #swagger.summary = "Forgot Password"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    "email": "test@site.com"
+                }
+            }
+        */
 
         const { email } = req.body
             
@@ -193,6 +198,19 @@ module.exports = {
     },
 
     changePassword: async(req, res) => {
+
+        /* 
+            #swagger.tags = ["Users"]
+            #swagger.summary = "Forgot Password"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    "email": "test@site.com"
+                    "newPass": "1234"
+                }
+            }
+        */
 
         const { email, newPass } = req.body
 
